--- a/Hippo/AgentSdk.storyboard
+++ b/Hippo/AgentSdk.storyboard
@@ -908,6 +908,10 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                             </tableView>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_loader_shape" translatesAutoresizingMaskIntoConstraints="NO" id="3eQ-3f-qB0" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="167.5" y="333.5" width="40" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1MB-pV-MdH" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -920,7 +924,9 @@
                         <constraints>
                             <constraint firstItem="xHG-ma-41l" firstAttribute="leading" secondItem="XYf-Ak-9yg" secondAttribute="leading" id="1G8-7M-cpH"/>
                             <constraint firstItem="1MB-pV-MdH" firstAttribute="leading" secondItem="XYf-Ak-9yg" secondAttribute="leading" id="23o-CE-2c5"/>
+                            <constraint firstItem="3eQ-3f-qB0" firstAttribute="centerX" secondItem="xHG-ma-41l" secondAttribute="centerX" id="EhT-Vp-Ftn"/>
                             <constraint firstItem="Ujw-VA-SnJ" firstAttribute="top" secondItem="xHG-ma-41l" secondAttribute="bottom" id="HfN-ge-Dmk"/>
+                            <constraint firstItem="3eQ-3f-qB0" firstAttribute="centerY" secondItem="xHG-ma-41l" secondAttribute="centerY" id="R4r-iR-5f7"/>
                             <constraint firstAttribute="trailing" secondItem="xHG-ma-41l" secondAttribute="trailing" id="YGa-nF-fgK"/>
                             <constraint firstAttribute="trailing" secondItem="1MB-pV-MdH" secondAttribute="trailing" id="amv-Ie-4De"/>
                             <constraint firstItem="1MB-pV-MdH" firstAttribute="top" secondItem="Quf-Sv-Me1" secondAttribute="bottom" id="ffy-nL-04W"/>
@@ -938,6 +944,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="loaderView" destination="3eQ-3f-qB0" id="V7n-l0-9MC"/>
                         <outlet property="tableView" destination="xHG-ma-41l" id="RvR-D2-0k7"/>
                         <outlet property="view_NavigationBar" destination="1MB-pV-MdH" id="aJ3-6d-OVY"/>
                     </connections>
